@@ -273,6 +273,7 @@ export(abbreviateTimeLabels,
        read.rsk,
        read.sealevel,
        read.section,
+       repositoryURL,
        rescale,
        resizableLabel,
        retime,
