@@ -1,4 +1,5 @@
 0.9-18
+- repositoryURL added
 - add support for G1SST satellite
 - all objects now have metadata items for units and flags
 - ctdTrim() method renamed: old A and B are new A; old C is new B
